Closed Bug 27543 Opened 26 years ago Closed 26 years ago

Crash while operating on deviceContext (FlushFontCache)

Categories

(Core :: Layout, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: racham, Assigned: erik)

References

Details

(Whiteboard: have fix, waiting for review)

Erik, I created a new profile from ProfileManager's CreateProfile and selected that profile and clicking on Start browser crashes the app in deviceContext. I think it's crashing at the point of flushing fonts. NOTE : If you start the browser again and use the profile you created in the previous session, the browser comes up without any problems. The font flush problem is with using the freshly created profile only. May be there is sonthing you can check before executing the flush on font cache ? Stack Trace : nsDeviceContextWin::PrefChanged(const char * 0x01773d80, void * 0x027e04d0) line 706 + 9 bytes pref_DoCallback(const char * 0x01773d80) line 2318 + 17 bytes pref_HashPref(const char * 0x01773d80, PrefValue {...}, int 128, int 0) line 1887 + 9 bytes pref_HashJSPref(unsigned int 2, long * 0x00f11eb8, int 0) line 2701 + 22 bytes pref_NativeDefaultPref(JSContext * 0x027e61f0, JSObject * 0x00e76f28, unsigned int 2, long * 0x00f11eb8, long * 0x0012c790) line 1916 + 15 bytes js_Invoke(JSContext * 0x027e61f0, unsigned int 2, unsigned int 0) line 665 + 26 bytes js_Interpret(JSContext * 0x027e61f0, long * 0x0012d0bc) line 2292 + 15 bytes js_Execute(JSContext * 0x027e61f0, JSObject * 0x00e76f28, JSScript * 0x00f08470, JSFunction * 0x00000000, JSStackFrame * 0x00000000, unsigned int 0, long * 0x0012d0bc) line 836 + 13 bytes JS_EvaluateUCScriptForPrincipals(JSContext * 0x027e61f0, JSObject * 0x00e76f28, JSPrincipals * 0x00000000, const unsigned short * 0x00efddd0, unsigned int 4786, const char * 0x00000000, unsigned int 0, long * 0x0012d0bc) line 2740 + 27 bytes JS_EvaluateUCScript(JSContext * 0x027e61f0, JSObject * 0x00e76f28, const unsigned short * 0x00efddd0, unsigned int 4786, const char * 0x00000000, unsigned int 0, long * 0x0012d0bc) line 2722 + 35 bytes JS_EvaluateScript(JSContext * 0x027e61f0, JSObject * 0x00e76f28, const char * 0x00ebbf58, unsigned int 4786, const char * 0x00000000, unsigned int 0, long * 0x0012d0bc) line 2689 + 33 bytes PREF_EvaluateConfigScript(const char * 0x00ebbf58, unsigned int 4786, const char * 0x00000000, int 0, int 1, int 0) line 644 + 35 bytes pref_OpenFileSpec(nsIFileSpec * 0x0176c0b0, int 0, int 0, int 0, int 0) line 1084 + 25 bytes pref_InitInitialObjects() line 1340 + 17 bytes PREF_Init(const char * 0x00000000) line 467 + 5 bytes nsPref::StartUp(nsPref * const 0x00d18940) line 267 + 7 bytes nsPref::ResetPrefs(nsPref * const 0x00d18940) line 316 + 12 bytes nsProfile::LoadNewProfilePrefs(nsProfile * const 0x02035a40) line 1089 nsProfile::StartApprunner(nsProfile * const 0x02035a40, const char * 0x027e6400) line 1078 + 12 bytes XPTC_InvokeByIndex(nsISupports * 0x02035a40, unsigned int 17, unsigned int 1, nsXPTCVariant * 0x0012d3c0) line 139 nsXPCWrappedNativeClass::CallWrappedMethod(JSContext * 0x01ed9990, nsXPCWrappedNative * 0x02037f10, const XPCNativeMemberDescriptor * 0x02036c9c, nsXPCWrappedNativeClass::CallMode CALL_METHOD, unsigned int 1, long * 0x00eb4d5c, long * 0x0012d580) line 898 + 43 bytes WrappedNative_CallMethod(JSContext * 0x01ed9990, JSObject * 0x00e985f8, unsigned int 1, long * 0x00eb4d5c, long * 0x0012d580) line 200 + 34 bytes js_Invoke(JSContext * 0x01ed9990, unsigned int 1, unsigned int 0) line 665 + 26 bytes js_Interpret(JSContext * 0x01ed9990, long * 0x0012de6c) line 2292 + 15 bytes js_Invoke(JSContext * 0x01ed9990, unsigned int 0, unsigned int 0) line 681 + 13 bytes js_Interpret(JSContext * 0x01ed9990, long * 0x0012e714) line 2292 + 15 bytes js_Invoke(JSContext * 0x01ed9990, unsigned int 0, unsigned int 0) line 681 + 13 bytes js_Interpret(JSContext * 0x01ed9990, long * 0x0012efbc) line 2292 + 15 bytes js_Invoke(JSContext * 0x01ed9990, unsigned int 1, unsigned int 2) line 681 + 13 bytes js_InternalInvoke(JSContext * 0x01ed9990, JSObject * 0x00ee7f18, long 15631784, unsigned int 0, unsigned int 1, long * 0x0012f148, long * 0x0012f0f4) line 754 + 19 bytes JS_CallFunctionValue(JSContext * 0x01ed9990, JSObject * 0x00ee7f18, long 15631784, unsigned int 1, long * 0x0012f148, long * 0x0012f0f4) line 2787 + 31 bytes nsJSContext::CallEventHandler(nsJSContext * const 0x01ed8d00, void * 0x00ee7f18, void * 0x00ee85a8, unsigned int 1, void * 0x0012f148, int * 0x0012f144) line 562 + 33 bytes nsJSEventListener::HandleEvent(nsIDOMEvent * 0x027e0874) line 128 + 57 bytes nsEventListenerManager::HandleEventSubType(nsListenerStruct * 0x020b9890, nsIDOMEvent * 0x027e0874, unsigned int 4) line 677 + 19 bytes nsEventListenerManager::HandleEvent(nsIPresContext * 0x01ed7db0, nsEvent * 0x0012f678, nsIDOMEvent * * 0x0012f640, unsigned int 7, nsEventStatus * 0x0012f93c) line 817 + 25 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x020b99c0, nsIPresContext * 0x01ed7db0, nsEvent * 0x0012f678, nsIDOMEvent * * 0x0012f640, unsigned int 1, nsEventStatus * 0x0012f93c) line 2928 nsEventStateManager::CheckForAndDispatchClick(nsEventStateManager * const 0x020d2be0, nsIPresContext * 0x01ed7db0, nsMouseEvent * 0x0012fa30, nsEventStatus * 0x0012f93c) line 1631 + 42 bytes nsEventStateManager::PostHandleEvent(nsEventStateManager * const 0x020d2be0, nsIPresContext * 0x01ed7db0, nsGUIEvent * 0x0012fa30, nsIFrame * 0x00ed36ec, nsEventStatus * 0x0012f93c, nsIView * 0x01f7bce0) line 849 + 24 bytes PresShell::HandleEvent(PresShell * const 0x01f7b614, nsIView * 0x01f7bce0, nsGUIEvent * 0x0012fa30, nsEventStatus * 0x0012f93c) line 2888 + 43 bytes nsView::HandleEvent(nsView * const 0x01f7bce0, nsGUIEvent * 0x0012fa30, unsigned int 28, nsEventStatus * 0x0012f93c, int & 0) line 799 nsViewManager::DispatchEvent(nsViewManager * const 0x01f7a130, nsGUIEvent * 0x0012fa30, nsEventStatus * 0x0012f93c) line 1704 HandleEvent(nsGUIEvent * 0x0012fa30) line 69 nsWindow::DispatchEvent(nsWindow * const 0x01f7bbc4, nsGUIEvent * 0x0012fa30, nsEventStatus & nsEventStatus_eIgnore) line 493 + 10 bytes nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012fa30) line 514 nsWindow::DispatchMouseEvent(unsigned int 301, nsPoint * 0x00000000) line 2932 + 21 bytes ChildWindow::DispatchMouseEvent(unsigned int 301, nsPoint * 0x00000000) line 3150 nsWindow::ProcessMessage(unsigned int 514, unsigned int 0, long 17957195, long * 0x0012fcbc) line 2237 + 24 bytes nsWindow::WindowProc(HWND__ * 0x036f04ea, unsigned int 514, unsigned int 0, long 17957195) line 673 + 27 bytes USER32! 77e71820() nsStdURL::~nsStdURL() line 160 + 6 bytes
Status: NEW → ASSIGNED
Keywords: beta1
Target Milestone: M14
Whiteboard: have fix, waiting for review
Checked in a fix.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
*** Bug 27620 has been marked as a duplicate of this bug. ***
With the Feb 21 build, I don't see this problem.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.