bug 27543 and bug 27566; crashing in profile manager; need to unregister pref callback when destroying device context; r=none